feat(api): implement fizzbuzz + implement test
