# swagger.yaml
@@ -61,17 +61,19 @@ paths:
           required: true
           in: query
           type: string
+          x-nullable: false
           description: string that will replace all multiples of int1
         - name: str2
           required: true
           in: query
           type: string
           description: string that will replace all multiples of int2
+          x-nullable: false
       responses:
         200:
           description: fizz buzz string
           schema:
-            type: string
+            $ref: '#/definitions/FizzBuzzResponse'
         default:
           description: Error handling the request
           schema:
@@ -85,3 +87,7 @@ definitions:
       message:
         type: string
     type: object
+  FizzBuzzResponse:
+    properties:
+      output:
+        type: string
